# matrix_comparison

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
python/: plot_results.py
src/: eigen_decomp.cpp  largest_evec.cpp  main.cpp  python_test.py  tnt_main.cpp
